--- a/120_Proximity_Matching/35_Shingles.asciidoc
+++ b/120_Proximity_Matching/35_Shingles.asciidoc
@@ -135,7 +135,7 @@ PUT /my_index/_mapping/my_type
                 "type": "string",
                 "fields": {
                     "shingles": {
-                        "type":     "string",
+                        "type":     "text",
                         "analyzer": "my_shingle_analyzer"
                     }
                 }
